# evo-memory-server

./: CHANGELOG.md  Phase3_Design.md  full_evo_metadata_migration.cypher  pyproject.toml  rollback_full_migration.cypher  rollback_test_migration.cypher  test.sh  test_migration.cypher
backups/: ANALYSIS_REPORT_20250825.md  backup_nodes_relations_20250825_133208.cypher  backup_summary_20250825_133214.txt  detailed_metadata_analysis_20250825_133246.txt  metadata_analysis_20250825_133228.txt  nodes_with_full_evo_metadata_20250825_133305.txt
servers/mcp-neo4j-memory/: README.md  pyproject.toml
servers/mcp-neo4j-memory/docs/: dynamic-tool-descriptions.md  implementation-plan.md
servers/mcp-neo4j-memory/src/mcp_neo4j_memory/: __init__.py  __main__.py  description_schemas.py  dynamic_descriptions.py  neo4j_memory.py  server.py  utils.py
servers/mcp-neo4j-memory/tests/: test_dynamic_descriptions.py
src/mcp_neo4j_memory/: server.py
