[project]
name = "evo-memory-server"
version = "0.5.0"
description = "MCP Evo-Memory Server - Evolutionary Knowledge Graph with Intent-Guided Patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "neo4j>=5.26.0",
    "pydantic>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["servers/mcp-neo4j-memory/src/mcp_neo4j_memory"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "testcontainers[neo4j]>=4.10.0",
    "aiohttp>=3.8.0"
]

[project.scripts]
evo-memory-server = "mcp_neo4j_memory:main"

[tool.pytest.ini_options]
pythonpath = [
  "servers/mcp-neo4j-memory/src"
]
